@@ -423,6 +423,15 @@ test text-8.24 {TextWidgetCmd procedure, "replace" option with peers, undo} {
 	lappend res 1
     }
 } {foo 0 1}
+test text-8.25 {TextWidgetCmd procedure, "replace" option crash} -setup {
+    destroy .tt
+} -body {
+    text .tt
+    .tt insert 0.0 foo\n
+    .tt replace end-1l end bar
+} -cleanup {
+    destroy .tt
+} -result {}
 
 .t delete 1.0 end; .t insert 1.0 $prevtext
 
